2008-12-10  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Updated email address for reporting bugs.
	* TODO: Updated list.

2008-12-02  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, NEWS: Support for (non-)recursive 'ls'

2008-12-01  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-pre3
	  ---------------------------

	* S3/PkgInfo.py: Bumped up version to 0.9.9-pre3

2008-12-01  Michal Ludvig  <michal@logix.cz>

	* run-tests.py: Added a lot of new tests.
	* testsuite/etc/logo.png: New file.

2008-11-30  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: object_get() -- make start_position argument optional.

2008-11-29  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Delete local files with "sync --delete-removed"

2008-11-25  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/Progress.py: Fixed Unicode output in Progress meter.
	* s3cmd: Fixed 'del --recursive' without prefix (i.e. all objects).
	* TODO: Updated list.
	* upload-to-sf.sh: Helper script.
	* S3/PkgInfo.py: Bumped up version to 0.9.9-pre2+svn

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-pre2
	  ------------------------

	* S3/PkgInfo.py: Bumped up version to 0.9.9-pre2
	* NEWS: Added 0.9.9-pre2

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* s3cmd, s3cmd.1, S3/S3.py: Display or don't display progress meter
	  default depends on whether we're on TTY (console) or not.

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Fixed 'get' conflict.
	* s3cmd.1, TODO: Document 'mv' command.

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py, s3cmd, S3/Config.py, s3cmd.1: Added --continue for
	  'get' command, improved 'get' failure resiliency.
	* S3/Progress.py: Support for progress meter not starting in 0.
	* S3/S3.py: improved retrying in send_request() and send_file()

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, NEWS: "s3cmd mv" for moving objects

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* S3/Utils.py: Common XML parser.