@@ -219,9 +219,10 @@ def cmd_object_put(args):
 			warning("File can not be uploaded: %s" % e)
 			continue
 		speed_fmt = formatSize(response["speed"], human_readable = True, floating_point = True)
-		output("File '%s' stored as %s (%d bytes in %0.1f seconds, %0.2f %sB/s) [%d of %d]" %
-			(file, uri_final, response["size"], response["elapsed"], speed_fmt[0], speed_fmt[1],
-			seq, total))
+		if not Config().progress_meter:
+			output("File '%s' stored as %s (%d bytes in %0.1f seconds, %0.2f %sB/s) [%d of %d]" %
+				(file, uri_final, response["size"], response["elapsed"], speed_fmt[0], speed_fmt[1],
+				seq, total))
 		if Config().acl_public:
 			output("Public URL of the object is: %s" %
 				(uri_final.public_url()))
@@ -292,9 +293,9 @@ def cmd_object_get(args):
 		if response["headers"].has_key("x-amz-meta-s3tools-gpgenc"):
 			gpg_decrypt(destination, response["headers"]["x-amz-meta-s3tools-gpgenc"])
 			response["size"] = os.stat(destination)[6]
-		if destination != "-":
+		if not Config().progress_meter and destination != "-":
 			speed_fmt = formatSize(response["speed"], human_readable = True, floating_point = True)
-			output("Object %s saved as '%s' (%d bytes in %0.1f seconds, %0.2f %sB/s)" %
+			output("File %s saved as '%s' (%d bytes in %0.1f seconds, %0.2f %sB/s)" %
 				(uri, destination, response["size"], response["elapsed"], speed_fmt[0], speed_fmt[1]))
 
 def cmd_object_del(args):
@@ -603,9 +604,10 @@ def cmd_sync_remote2local(src, dst):
 			error("%s: download failed too many times. Skipping that file." % file)
 			continue
 		speed_fmt = formatSize(response["speed"], human_readable = True, floating_point = True)
-		output("File '%s' stored as %s (%d bytes in %0.1f seconds, %0.2f %sB/s) [%d of %d]" %
-			(uri, dst_file, response["size"], response["elapsed"], speed_fmt[0], speed_fmt[1],
-			seq, total_count))
+		if not Config().progress_meter:
+			output("File '%s' stored as %s (%d bytes in %0.1f seconds, %0.2f %sB/s) [%d of %d]" %
+				(uri, dst_file, response["size"], response["elapsed"], speed_fmt[0], speed_fmt[1],
+				seq, total_count))
 		total_size += response["size"]
 
 	total_elapsed = time.time() - timestamp_start
@@ -702,9 +704,10 @@ def cmd_sync_local2remote(src, dst):
 			warning("File can not be uploaded: %s" % e)
 			continue
 		speed_fmt = formatSize(response["speed"], human_readable = True, floating_point = True)
-		output("File '%s' stored as %s (%d bytes in %0.1f seconds, %0.2f %sB/s) [%d of %d]" %
-			(src, uri, response["size"], response["elapsed"], speed_fmt[0], speed_fmt[1],
-			seq, total_count))
+		if not cfg.progress_meter:
+			output("File '%s' stored as %s (%d bytes in %0.1f seconds, %0.2f %sB/s) [%d of %d]" %
+				(src, uri, response["size"], response["elapsed"], speed_fmt[0], speed_fmt[1],
+				seq, total_count))
 		total_size += response["size"]
 
 	total_elapsed = time.time() - timestamp_start
